[package]
name = "mahampreter"
version = "0.0.5"
authors = ["Aiden Fox Ivey <aiden@fox-ivey.com"]
description = "A pure Rust implementation of Scheme."
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.2.7", features = ["derive"] }
nom = "7.1.3"
rustyline = "11.0.0"
